@@ -1,0 +1,4 @@
+oauth.consumerKey=lrp3vbdblIDKHCCjwKMkzD1EX
+oauth.consumerSecret=SlL7xtjERBqb4YSpAPtpi2CDNibJKacMt1evkXbAmyqu6Wxuxt
+oauth.accessToken=2282445319-QmosFSwAdnilio45cbdD4FIdxSv6JlK2wrreCgF
+oauth.accessTokenSecret=aS5gH86QKd4nTx6BkeNRXUJcywS2t0yh0BJFtwFSK1snq
